# social_information_network

./: .gitignore  README.md  SKILL.md  config.json  daily_report_skill  daily_report_skill.py  example.py  pyproject.toml
.github/workflows/: generate_report.yml
examples/: network_analysis.json  papers.json  prediction_analysis.json  trend_analysis.json
src/skill_e_report/: __init__.py  cli.py  extract.py  io.py  models.py  pipeline.py  report.py  viz.py
tests/: test_pipeline.py
