[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-e-daily-report"
version = "0.1.0"
description = "Skill E for final daily report and visualization over arXiv research networks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "networkx>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
skill-e-report = "skill_e_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
